Using fcoo/jquery-time-slider ^4.0.0 and fcoo/leaflet-control-box ^2.0.0

--- a/demo/index.html
+++ b/demo/index.html
@@ -26,7 +26,7 @@
 
         var testTimeSliderControl = new L.Control.TimeSlider({
             lang            : 'da',
-            position        : 'topright',
+            position        : 'bottomcenter',
             defaultMinimized: false,
             displayAsLocal  : false,
 
