--- a/demo/index.html
+++ b/demo/index.html
@@ -24,6 +24,9 @@
     <script src="bower_components.js"></script>
     <script src="../src/leaflet-time-slider.js"></script>
     <script>
+        i18next.init();
+        i18next.changeLanguage('da');
+
         var map = L.map('map').setView([51.505, -0.09], 13);
         L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', { attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors' }).addTo(map);
 
