--- a/demo/index.html
+++ b/demo/index.html
@@ -10,7 +10,7 @@
     <meta name='owner' content='FCOO'>
 
     <link  href="bower_components.css" rel="stylesheet">
-    <link  href="css/font-awesome.css" rel="stylesheet">
+    <link  href="css/fontawesome-all.css" rel="stylesheet">
     <style>
         html, body, #map { width: 100%; height:100%; padding.0; margin: 0; }
     </style>
